--- a/products.html
+++ b/products.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avni Plastics - Home</title>
+  <title>Our Products - Avni Plastics</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Avni Plastics</h1>
+    <h1>Our Products</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
@@ -17,15 +17,10 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <section class="hero">
-    <h2>Welcome to Avni Plastics</h2>
-    <p>Bulk suppliers of quality plastic bottles</p>
-  </section>
   <section class="gallery">
     <img src="images/bottle1.jpg" alt="Bottle 1" />
     <img src="images/bottle2.jpg" alt="Bottle 2" />
     <img src="images/bottle3.jpg" alt="Bottle 3" />
   </section>
-  <a class="whatsapp" href="https://wa.me/919999999999" target="_blank">WhatsApp</a>
 </body>
 </html>
