--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
   <section>
-    <p>Email: contact@avniplastics.com</p>
-    <p>Phone: +91-9999999999</p>
+    <p>Email: saxenaaryan305@gmail.com</p>
+    <p>Phone: +91-9993041244</p>
     <p>Address: Industrial Area, Madhya Pradesh, India</p>
   </section>
 </body>
