--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Avni Plastics - Home</title>
+  <meta name="description" content="Avni Plastics - Leading manufacturer of plastic bottles for bulk supply.">
+  <meta name="keywords" content="Avni Plastics, plastic bottles, bulk plastic supplier, Indian plastic manufacturer">
+  <meta name="author" content="Avni Plastics">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Avni Plastics - Bulk Plastic Bottle Manufacturer" />
+  <meta property="og:description" content="Top quality plastic bottles for industrial & commercial supply." />
+  <meta property="og:url" content="https://avni-plastics.netlify.app" />
+  <meta property="og:type" content="website" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
