--- a/products.html
+++ b/products.html
@@ -1,26 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Products - Avni Plastics</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Avni Plastics - Products</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>Our Products</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section class="gallery">
-    <img src="images/bottle1.jpg" alt="Bottle 1" />
-    <img src="images/bottle2.jpg" alt="Bottle 2" />
-    <img src="images/bottle3.jpg" alt="Bottle 3" />
-  </section>
+
+<header>
+  <div class="logo">Avni Plastics</div>
+  <nav>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="products.html" class="active">Products</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section class="products-gallery">
+  <h2>Our Plastic Bottles</h2>
+  <div class="gallery-grid">
+    <img src="images/bottle1.jpg" alt="Plastic Bottle 1" />
+    <img src="images/bottle2.jpg" alt="Plastic Bottle 2" />
+    <img src="images/bottle3.jpg" alt="Plastic Bottle 3" />
+    <img src="images/bottle4.jpg" alt="Plastic Bottle 4" />
+  </div>
+</section>
+
+<div class="whatsapp-popup" onclick="window.open('https://wa.me/9993041244', '_blank')">
+  <img src="images/whatsapp.png" alt="WhatsApp Contact" />
+</div>
+
+<footer>
+  &copy; 2025 Avni Plastics | Contact: 9993041244 | Email: saxenaaryan305@gmail.com
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
