--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - Avni Plastics</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Avni Plastics - Contact</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>Contact Us</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section>
-    <p>Email: saxenaaryan305@gmail.com</p>
-    <p>Phone: +91-9993041244</p>
-    <p>Address: Industrial Area, Madhya Pradesh, India</p>
-  </section>
+
+<header>
+  <div class="logo">Avni Plastics</div>
+  <nav>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section class="contact-section">
+  <h2>Contact Us</h2>
+  <p>Phone: <a href="tel:9993041244">9993041244</a></p>
+  <p>Email: <a href="mailto:saxenaaryan305@gmail.com">saxenaaryan305@gmail.com</a></p>
+  <p>Address: Your company address here, City, State, India</p>
+</section>
+
+<div class="whatsapp-popup" onclick="window.open('https://wa.me/9993041244', '_blank')">
+  <img src="images/whatsapp.png" alt="WhatsApp Contact" />
+</div>
+
+<footer>
+  &copy; 2025 Avni Plastics | Contact: 9993041244 | Email: saxenaaryan305@gmail.com
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
