--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta name="google-site-verification" content="4DYH0wR8SXwBF--JjsJtcAOmnlISn_1MZOQtwve6DtQ" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Avni Plastics - Home</title>
   <meta name="description" content="Avni Plastics - Leading manufacturer of plastic bottles for bulk supply.">
   <meta name="keywords" content="Avni Plastics, plastic bottles, bulk plastic supplier, Indian plastic manufacturer">
@@ -13,43 +14,27 @@
   <meta property="og:description" content="Top quality plastic bottles for industrial & commercial supply." />
   <meta property="og:url" content="https://avni-plastics.netlify.app" />
   <meta property="og:type" content="website" />
-
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<header>
-  <div class="logo">Avni Plastics</div>
-  <nav>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-<section class="hero-slider">
-  <img src="images/bottle1.jpg" alt="Plastic Bottle 1" class="active" />
-  <img src="images/bottle2.jpg" alt="Plastic Bottle 2" />
-  <img src="images/bottle3.jpg" alt="Plastic Bottle 3" />
-  <img src="images/bottle4.jpg" alt="Plastic Bottle 4" />
-</section>
-
-<section class="intro">
-  <h1>Welcome to Avni Plastics</h1>
-  <p>Your trusted supplier for high-quality plastic bottles in bulk. Durable, eco-friendly, and affordable.</p>
-</section>
-
-<div class="whatsapp-popup" onclick="window.open('https://wa.me/9993041244', '_blank')">
-  <img src="images/whatsapp.png" alt="WhatsApp Contact" />
-</div>
-
-<footer>
-  &copy; 2025 Avni Plastics | Contact: 9993041244 | Email: saxenaaryan305@gmail.com
-</footer>
-
-<script src="js/script.js"></script>
+  <header>
+    <h1>Avni Plastics</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section class="hero">
+    <h2>Welcome to Avni Plastics</h2>
+    <p>Bulk suppliers of quality plastic bottles</p>
+  </section>
+  <section class="gallery">
+    <img src="images/bottle1.jpg" alt="Bottle 1" />
+    <img src="images/bottle2.jpg" alt="Bottle 2" />
+    <img src="images/bottle3.jpg" alt="Bottle 3" />
+  </section>
+  <a class="whatsapp" href="https://wa.me/919993041244" target="_blank">WhatsApp</a>
 </body>
 </html>
