--- a/about.html
+++ b/about.html
@@ -1,39 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Avni Plastics - About Us</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us - Avni Plastics</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<header>
-  <div class="logo">Avni Plastics</div>
-  <nav>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-<section class="about-section">
-  <h2>About Avni Plastics</h2>
-  <p>Avni Plastics has been a leading manufacturer and bulk supplier of premium quality plastic bottles. Our products are eco-friendly and widely used across industries.</p>
-  <p>We focus on durability, quality, and timely delivery to ensure complete customer satisfaction.</p>
-</section>
-
-<div class="whatsapp-popup" onclick="window.open('https://wa.me/9993041244', '_blank')">
-  <img src="images/whatsapp.png" alt="WhatsApp Contact" />
-</div>
-
-<footer>
-  &copy; 2025 Avni Plastics | Contact: 9993041244 | Email: saxenaaryan305@gmail.com
-</footer>
-
-<script src="js/script.js"></script>
+  <header>
+    <h1>About Us</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section>
+    <p>Avni Plastics is a trusted manufacturer and bulk supplier of premium plastic bottles for a wide range of industries. We focus on durability, eco-friendly production, and customer satisfaction.</p>
+  </section>
 </body>
 </html>
