--- a/index.html
+++ b/index.html
@@ -1,40 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="4DYH0wR8SXwBF--JjsJtcAOmnlISn_1MZOQtwve6DtQ" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Avni Plastics - Home</title>
-  <meta name="description" content="Avni Plastics - Leading manufacturer of plastic bottles for bulk supply.">
-  <meta name="keywords" content="Avni Plastics, plastic bottles, bulk plastic supplier, Indian plastic manufacturer">
-  <meta name="author" content="Avni Plastics">
-  <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Avni Plastics - Bulk Plastic Bottle Manufacturer" />
-  <meta property="og:description" content="Top quality plastic bottles for industrial & commercial supply." />
-  <meta property="og:url" content="https://avni-plastics.netlify.app" />
-  <meta property="og:type" content="website" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #f5f5f5;
+    }
+    header {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 1rem 2rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+    }
+    .product {
+      background: rgba(255,255,255,0.1);
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      padding: 15px;
+      border-radius: 50%;
+      z-index: 1000;
+    }
+    .whatsapp img {
+      width: 30px;
+      height: 30px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Avni Plastics</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section class="hero">
-    <h2>Welcome to Avni Plastics</h2>
-    <p>Bulk suppliers of quality plastic bottles</p>
-  </section>
-  <section class="gallery">
-    <img src="images/bottle1.jpg" alt="Bottle 1" />
-    <img src="images/bottle2.jpg" alt="Bottle 2" />
-    <img src="images/bottle3.jpg" alt="Bottle 3" />
-  </section>
-  <a class="whatsapp" href="https://wa.me/919993041244" target="_blank">WhatsApp</a>
+  <header>Avni Plastics - Home</header>
+  <main><h2>Welcome to Avni Plastics</h2><p>Your trusted supplier for high-quality plastic bottles in bulk.</p></main>
+  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
+  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+  </a>
 </body>
 </html>
