--- a/about.html
+++ b/about.html
@@ -1,24 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Avni Plastics</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Avni Plastics - About Us</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #f5f5f5;
+    }
+    header {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 1rem 2rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+    }
+    .product {
+      background: rgba(255,255,255,0.1);
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      padding: 15px;
+      border-radius: 50%;
+      z-index: 1000;
+    }
+    .whatsapp img {
+      width: 30px;
+      height: 30px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>About Us</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section>
-    <p>Avni Plastics is a trusted manufacturer and bulk supplier of premium plastic bottles for a wide range of industries. We focus on durability, eco-friendly production, and customer satisfaction.</p>
-  </section>
+  <header>Avni Plastics - About Us</header>
+  <main><p>Avni Plastics is a leading manufacturer of plastic bottles, dedicated to quality and bulk supply excellence.</p></main>
+  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
+  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+  </a>
 </body>
 </html>
