--- a/products.html
+++ b/products.html
@@ -1,26 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Products - Avni Plastics</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Avni Plastics - Our Products</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #f5f5f5;
+    }
+    header {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 1rem 2rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+    }
+    .product {
+      background: rgba(255,255,255,0.1);
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      padding: 15px;
+      border-radius: 50%;
+      z-index: 1000;
+    }
+    .whatsapp img {
+      width: 30px;
+      height: 30px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Our Products</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section class="gallery">
-    <img src="images/bottle1.jpg" alt="Bottle 1" />
-    <img src="images/bottle2.jpg" alt="Bottle 2" />
-    <img src="images/bottle3.jpg" alt="Bottle 3" />
-  </section>
+  <header>Avni Plastics - Our Products</header>
+  <main><div class='product-grid'><div class='product'><img src='images/bottle1.jpg' alt='Bottle 1' /><p>Bottle 1</p></div><div class='product'><img src='images/bottle2.jpg' alt='Bottle 2' /><p>Bottle 2</p></div><div class='product'><img src='images/bottle3.jpg' alt='Bottle 3' /><p>Bottle 3</p></div><div class='product'><img src='images/bottle4.jpg' alt='Bottle 4' /><p>Bottle 4</p></div><div class='product'><img src='images/bottle5.jpg' alt='Bottle 5' /><p>Bottle 5</p></div><div class='product'><img src='images/bottle6.jpg' alt='Bottle 6' /><p>Bottle 6</p></div><div class='product'><img src='images/bottle7.jpg' alt='Bottle 7' /><p>Bottle 7</p></div><div class='product'><img src='images/bottle8.jpg' alt='Bottle 8' /><p>Bottle 8</p></div><div class='product'><img src='images/bottle9.jpg' alt='Bottle 9' /><p>Bottle 9</p></div><div class='product'><img src='images/bottle10.jpg' alt='Bottle 10' /><p>Bottle 10</p></div></div></main>
+  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
+  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+  </a>
 </body>
 </html>
