--- a/index.html
+++ b/index.html
@@ -1,68 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avni Plastics - Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #f5f5f5;
-    }
-    header {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 1rem 2rem;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 600;
-    }
-    main {
-      padding: 2rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
-    }
-    .product {
-      background: rgba(255,255,255,0.1);
-      padding: 1rem;
-      border-radius: 10px;
-      text-align: center;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-    }
-    .whatsapp {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25D366;
-      padding: 15px;
-      border-radius: 50%;
-      z-index: 1000;
-    }
-    .whatsapp img {
-      width: 30px;
-      height: 30px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Avni Plastics - Premium Plastic Bottle Manufacturer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>Avni Plastics - Home</header>
-  <main><h2>Welcome to Avni Plastics</h2><p>Your trusted supplier for high-quality plastic bottles in bulk.</p></main>
-  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
-  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
-  </a>
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/yournumber" class="whatsapp-float" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <img src="images/logo.png" alt="Avni Plastics Logo">
+            </div>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1 class="animate__animated animate__fadeInDown">Premium Quality Plastic Bottles</h1>
+            <p class="animate__animated animate__fadeInUp">Manufacturing excellence since 2010. We supply high-quality plastic bottles in bulk quantities.</p>
+            <a href="products.html" class="btn animate__animated animate__fadeInUp">Explore Products</a>
+        </div>
+    </section>
+
+    <!-- Showcase Section -->
+    <section class="showcase">
+        <div class="container">
+            <h2>Our Product Showcase</h2>
+            <div class="showcase-slider">
+                <div class="slide active">
+                    <img src="images/showcase1.jpg" alt="Plastic Bottle Showcase 1">
+                </div>
+                <div class="slide">
+                    <img src="images/showcase2.jpg" alt="Plastic Bottle Showcase 2">
+                </div>
+                <div class="slide">
+                    <img src="images/showcase3.jpg" alt="Plastic Bottle Showcase 3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Products -->
+    <section class="featured-products">
+        <div class="container">
+            <h2>Featured Products</h2>
+            <div class="products-grid">
+                <div class="product-card">
+                    <img src="images/product1.jpg" alt="PET Bottle 500ml">
+                    <h3>PET Bottle 500ml</h3>
+                    <p>Clear, durable PET bottle perfect for beverages.</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/product2.jpg" alt="HDPE Bottle 1L">
+                    <h3>HDPE Bottle 1L</h3>
+                    <p>High-density polyethylene bottle for chemicals.</p>
+                </div>
+                <div class="product-card">
+                    <img src="images/product3.jpg" alt="Cosmetic Jar 250ml">
+                    <h3>Cosmetic Jar 250ml</h3>
+                    <p>Elegant jar for creams and cosmetics.</p>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="products.html" class="btn">View All Products</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us -->
+    <section class="why-choose-us">
+        <div class="container">
+            <h2>Why Choose Avni Plastics?</h2>
+            <div class="features">
+                <div class="feature">
+                    <i class="fas fa-check-circle"></i>
+                    <h3>Premium Quality</h3>
+                    <p>We use only the highest grade materials for durable products.</p>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-truck"></i>
+                    <h3>Bulk Supply</h3>
+                    <p>Specialized in large quantity orders with consistent quality.</p>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-cogs"></i>
+                    <h3>Custom Solutions</h3>
+                    <p>Tailored designs to meet your specific requirements.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Avni Plastics</h3>
+                    <p>Leading manufacturer of high-quality plastic bottles since 2010. We pride ourselves on quality, reliability, and customer satisfaction.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Info</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Industrial Area, City, Country</p>
+                    <p><i class="fas fa-phone"></i> +123 456 7890</p>
+                    <p><i class="fas fa-envelope"></i> info@avniplastics.com</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2023 Avni Plastics. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
