--- a/contact.html
+++ b/contact.html
@@ -1,92 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avni Plastics - Contact</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    html {
-      scroll-behavior: smooth;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #2c3e50, #bdc3c7);
-      color: #1c1c1c;
-      line-height: 1.6;
-      min-height: 100vh;
-      padding-bottom: 100px;
-    }
-    header {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 1rem 2rem;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 600;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    }
-    main {
-      padding: 2rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: rgba(255, 255, 255, 0.9);
-      margin-top: 2rem;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1rem;
-    }
-    .product {
-      background: rgba(255,255,255,0.8);
-      padding: 1rem;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .product:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-    }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      height: 180px;
-      object-fit: cover;
-    }
-    .whatsapp {
-      position: fixed;
-      bottom: 80px;
-      right: 20px;
-      background: #25D366;
-      padding: 15px;
-      border-radius: 50%;
-      z-index: 1000;
-    }
-    .whatsapp img {
-      width: 30px;
-      height: 30px;
-    }
-  </style>
+  <title>Contact Us - Avni Plastics</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>Avni Plastics - Contact</header>
-  <main><h2>Contact Us</h2><p>Phone: 9993041244<br>Email: saxenaaryan305@gmail.com</p></main>
-  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
-  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
-  </a>
+  <header>
+    <h1>Contact Us</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section>
+    <p>Email: saxenaaryan305@gmail.com</p>
+    <p>Phone: +91-9993041244</p>
+    <p>Address: Industrial Area, Madhya Pradesh, India</p>
+  </section>
 </body>
 </html>
